--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=order-service
+server.port=8081
+
+### DB Config
+spring.datasource.url=jdbc:mysql://localhost:3307/order-service
+spring.datasource.username=root
+spring.datasource.password=mysql
+# Disabled since we use flyway DB migration
+spring.jpa.hibernate.ddl-auto=none
